<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search / will display always -->
    <item android:id="@+id/action_home"
          android:title="@string/action_home"
          android:showAsAction="never"/>
     
    <!-- Location Found -->
    <item android:id="@+id/action_profile"
          android:title="@string/action_profile"
          android:showAsAction="never" />
     
    <!-- Refresh -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
     
    <!-- Help -->
    <item android:id="@+id/action_trail"
          android:title="@string/action_trail"
          android:showAsAction="never"/>
    
        <!-- Help -->
    <item android:id="@+id/action_scan"
          android:title="@string/action_scan"
          android:showAsAction="never"/>
     
    <!-- Check updates -->
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:showAsAction="never" />
</menu>